--- a/style.css
+++ b/style.css
@@ -33,7 +33,9 @@
   background-color: green;
   height: 100%;
   width: 100%;
+  margin: auto;
   display: box;
+  overflow: scroll;
 }
 .content .hobbies {
   list-style-type: square;
