added right padding for contact form

--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,6 @@ footer a {
   background: url("../res/jaybee.jpg") no-repeat center;
   background-size: cover;
 }
+.contact .right {
+  padding: 25px;
+}
