--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ footer a {
 }
 .contact .left {
   height: 100%;
+  padding: 20px;
   background: url("../res/jaybee.jpg") no-repeat center;
   background-size: cover;
 }
@@ -64,4 +65,21 @@ footer a {
 .contact h1 {
   position: relative;
   padding-bottom: 10px;
+}
+.content .field {
+  width: 100%;
+  padding: 0.2rem 0.5rem;
+  background-color: #313131;
+  color: #fbfbfb;
+  font-size: 0.9rem;
+  margin-bottom: 20px;
+  border: 2px solid #fbfbfb;
+}
+.content .field:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  transition: .5s;
+}
+.content .field:focus {
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 2px solid #cc2211;
 }
